# mccole

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  Makefile  README.md  config.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
data/: CONTRIBUTING.md  Makefile
data/info/: _setup.cfg  dom.yml  head.html
data/lib/mccole/extensions/: acknowledgments.py  excerpts.py  index.py  links.py  table.py  util.py
data/lib/mccole/resources/: mccole.css
docs/: 404.html  code_of_conduct.html  contributing.html  index.html  license.html  mccole.css  objects.inv
docs/CODE_OF_CONDUCT/: index.html
docs/CONTRIBUTING/: index.html
docs/LICENSE/: index.html
docs/bib/: index.html
docs/check/: index.html
docs/colophon/: index.html
docs/conduct/: index.html
docs/contents/: index.html
docs/contrib/: index.html
docs/finale/: index.html
docs/glossary/: index.html
docs/install/: index.html
docs/intro/: index.html
docs/license/: index.html
docs/lint/: index.html
docs/mccole/: __init__.py  render.py  stats.py  util.py
docs/mccole/templates/: page.html
docs/refresh/: index.html
docs/render/: index.html
docs/serve/: index.html
docs/stats/: index.html
info/: _config.py  _requirements.txt  bibliography.bib  glossary.yml  head.tex  links.yml  thanks.yml
lib/mccole/: mccole.mk  requirements.txt
lib/mccole/extensions/: batch.py  bib.py  credits.py  filters.py  fixme.py  glossary.py  heading.py  init.py  syllabus.py  termdefs.py  toc.py  util.py
lib/mccole/resources/: mccole.css
lib/mccole/templates/: node.ibis  title.html
mccole/: __init__.py  build.py  clui.py  epub.py  init.py  install.py  lint.py  refresh.py  render.py  serve.py  settings.toml  stats.py  util.py
mccole/data/: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
mccole/data/static/: page.css
mccole/data/templates/: page.html
mccole/static/: page.css
mccole/templates/: page.html
mini/: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
mini-slides-1/: README.md  pyproject.toml
mini-slides-1/finale/: index.md
mini-slides-2/: LICENSE.md  Makefile  README.md
mini/finale/: slides.md
mini/intro/: example.py  index.md  slides.md
pages/: build.md  check.md  install.md  lint.md  refresh.md  render.md  serve.md  stats.md
sample/: Makefile  README.md  pyproject.toml
sample/extras/: links.txt
sample/glossary/: index.md
sample/templates/: page.html
sites/regular/: CODE_OF_CONDUCT.md  Makefile
sites/regular/finale/: index.md
sites/regular/intro/: index.md  slides.md
sites/regular/static/: page.css
sites/rootpage/: LICENSE.md  Makefile  README.md  homepage.md  pyproject.toml
src/: build.py  check.py  clui.py  index.md  util.py
src/colophon/: index.md
src/conduct/: index.md
src/data/: LICENSE.md  Makefile
src/data/extras/: links.md
src/finale/: example.tbl  index.md
src/glossary/: index.md
src/intro/: csv.csv  first.py  index.md  json.json  shell.sh  sql.sql  third.text  toml.toml  yaml.yml
src/license/: index.md
src/mccole/: __init__.py  bib.py  build.py  check.py  clui.py  create.py  describe.py  detab.py  inclusions.py  index_build.py  shortcodes.py  single_page.py  util.py
src/mccole/data/: README.md
src/mccole/data/_extras/: links.md
src/mccole/data/_static/: mccole.css
src/mccole/data/_templates/: page.html  slides.html
test/: CONTRIBUTING.md  Makefile  README.md  bibliography.md  glossary.md  project.toml
test/01_intro/: index.md
test/02_finale/: index.md
test/docs/: index.html
test/docs/01_intro/: index.html
test/docs/02_finale/: index.html
test/docs/bibliography/: index.html
test/docs/code_of_conduct/: index.html
test/docs/conduct/: index.html
test/docs/contributing/: index.html
test/docs/glossary/: index.html
test/docs/license/: index.html
test/templates/: page.html
tests/: conftest.py  test_bib.py  test_build.py  test_check.py  test_clui.py  test_describe.py  test_detab.py  test_inclusions.py  test_index_build.py  test_lint.py  test_shortcodes.py  test_single_page.py  test_util.py
themes/: mccole.html  neat.html  pagewidth.css  picnic.html  pico.html  simple.html  tacit.html
tmp/: bibliography.html
