[project]
name = "mccole"
dynamic = ["version"]
requires-python = ">=3.12"
authors = [
    {name = "Greg Wilson", email = "gvwilson@third-bit.com"},
]
maintainers = [
    {name = "Greg Wilson", email = "gvwilson@third-bit.com"},
]
description = "A simple static site generator for tutorials"
keywords = ["open source", "static site generator"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "html5validator>=0.4.2",
    "jinja2>=3.1.6",
    "markdown>=3.10",
    "pygments>=2.19.2",
    "python-frontmatter>=1.1.0",
    "tomli>=2.3.0",
]

[project.urls]
Repository = "https://github.com/gvwilson/mccole"
Documentation = "https://mccole.readthedocs.io"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "markdown-include>=0.8.1",
    "mkdocs-material>=9.7.1",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0.0",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "twine>=6.2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/mccole/__init__.py"

[project.scripts]
mccole = "mccole.clui:main"
